--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,159 @@
-.App {
-  text-align: center;
+.App{
+  width: 30%;
+  margin-left: 35%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.forecastCard{
   display: flex;
   flex-direction: column;
+  width: 100%;
+  align-items: center;
+  /* background: #f5f5f5; */
+  padding-bottom: 3%;
+}
+.cardHeader{
+  text-align: center;
+  width: calc(100% - 50px);
+  color: white;
+  padding: 25px;
+  background: rgba(72,164,249,1);
+  background: -moz-radial-gradient(center, ellipse cover, rgba(72,164,249,1) 0%, rgba(79,163,243,1) 0%, rgba(53,140,231,1) 50%, rgba(26,116,219,1) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(72,164,249,1)), color-stop(0%, rgba(79,163,243,1)), color-stop(50%, rgba(53,140,231,1)), color-stop(100%, rgba(26,116,219,1)));
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(72,164,249,1) 0%, rgba(79,163,243,1) 0%, rgba(53,140,231,1) 50%, rgba(26,116,219,1) 100%);
+  background: -o-radial-gradient(center, ellipse cover, rgba(72,164,249,1) 0%, rgba(79,163,243,1) 0%, rgba(53,140,231,1) 50%, rgba(26,116,219,1) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(72,164,249,1) 0%, rgba(79,163,243,1) 0%, rgba(53,140,231,1) 50%, rgba(26,116,219,1) 100%);
+  background: radial-gradient(ellipse at center, rgba(72,164,249,1) 0%, rgba(79,163,243,1) 0%, rgba(53,140,231,1) 50%, rgba(26,116,219,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#48a4f9', endColorstr='#1a74db', GradientType=1 );
+}
+.cityName{
+  font-size: 1.7em;
+}
+.condition{
+  font-size: .9em;
+}
+.temp{
+  font-size: 3em;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 20px; 
+}
+.search{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+input {
+  width: calc(100% - 1,3em);
+  background: #fff;
+  color: #525865;
+  border: 1px solid #d1d1d1;
+  box-shadow: inset 0px 1px 8px rgba(0, 0, 0, 0.2);
+  font-family: inherit;
+  font-size: 1.3em;
+  line-height: 1.3;
+  outline: none;
+  padding: 0.6em 1.3em 0.7em;
+  -webkit-transition: .18s ease-out;
+  -moz-transition: .18s ease-out;
+  -o-transition: .18s ease-out;
+  transition: .18s ease-out;
 }
 
-.App-link {
-  color: #61dafb;
+input:hover {
+  box-shadow: inset 1px 2px 8px rgba(0, 0, 0, 0.02);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+input:focus {
+  color: #4b515d;
+  border: 1px solid #B8B6B6;
+  box-shadow: inset 1px 2px 4px rgba(0, 0, 0, 0.01), 0px 0px 8px rgba(0, 0, 0, 0.2);
+}
+.citisesSearch{
+  position: fixed;
+  z-index: 1;
+  top: 76px;
+  width: calc(30% - 4px);
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  font-size: 1.05em;
+  box-shadow: inset 1px 2px 4px rgba(0, 0, 0, 0.01), 0px 0px 8px rgba(0, 0, 0, 0.2);
+}
+.citisesSearch div{
+  border-bottom: 1px solid rgb(148, 148, 148);
+  padding: 10px;
+  cursor: pointer;
+}
+.citisesSearch div:hover{
+  background-color: #f5f5f5;
+}
+.day{
+  width: calc(100% - 20px);
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 10px;
+  border-bottom: 1px solid rgb(148, 148, 148);
+  align-items: center;
+  background: #fff;
+  cursor: pointer;
+}
+.day:hover{
+  background-color: #f5f5f5;
+}
+.dayInfo{
+  display: flex;
+  align-items: center;
+}
+.feelsLikeTemp{
+  margin-bottom: 35px;
+  margin-top: -5px;
+}
+.weekForecast{
+  width: 94%;
+  box-shadow: 0px 0px 4px 0px rgba(32, 32, 32, 0.75);
+  margin-top: -10px;
+}
+@media screen and (max-width: 1200px)
+{
+  .App {
+    width: 44%;
+    margin-left: 28%;
   }
-  to {
-    transform: rotate(360deg);
+  .citisesSearch{
+    width: calc(44% - 7px);
+  }
+}
+@media screen and (max-width: 800px)
+{
+  .App {
+    width: 66%;
+    margin-left: 17%;
+  }
+  .citisesSearch {
+    width: calc(66% - 10px);
+  }
+}
+@media screen and (max-width: 550px)
+{
+  *{
+    margin: 0;
+    padding: 0;
+  }
+  .App {
+    margin-top: 0;
+    width: 100%;
+    margin-left: 0;
+  }
+  .citisesSearch {
+    width: 100%;
+    top: 56px;
+  }
+  .day{
+    padding: 0px 10px;
   }
 }
