--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   align-items: center;
   flex-direction: column;
   margin-top: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 .loading{
   margin-top: 100px;
